Fixed email tooltip spacing bug

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -189,8 +189,8 @@ html, body {
   cursor: default;
   pointer-events: none;
   color: $text-color;
-  right: 5%;
-  left: 5%;
+  right: 0%;
+  left: 0%;
   text-align: center;
   top: -50px;
   padding: 10px 14px;
